# mcp_tools

./: .env.example  .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
mcp_query_registry/: config.py  main.py
mcp_query_registry/audit/: logger.py  masking.py  oracle_writer.py  record.py
mcp_query_registry/db/: connection.py  registry.py
mcp_query_registry/prompts/: audit_review.py  data_exploration.py  query_authoring.py  query_discovery.py
mcp_query_registry/tools/: get_query.py  list_queries.py  run_query.py
mcp_query_registry/validation/: parameters.py  sql_template.py
sql/: ddl.sql  sample_queries.sql
tests/: test_audit_logger.py  test_audit_masking.py  test_audit_oracle_writer.py  test_audit_record.py  test_db_registry.py  test_prompts_audit_review.py  test_prompts_data_exploration.py  test_prompts_query_authoring.py  test_prompts_query_discovery.py  test_tools_get_query.py  test_tools_list_queries.py  test_tools_run_query.py  test_validation.py  test_validation_sql_template.py
tests/integration/: conftest.py  test_integration.py
