[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-query-registry"
version = "0.1.0"
description = "Dynamic SQL query registry backed by Oracle, exposed via FastMCP"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0.0",
    "oracledb>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_query_registry*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=mcp_query_registry",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "-v",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["mcp_query_registry"]
omit = ["mcp_query_registry/main.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
